--- a/web1/src/app/product/add-manage/add-manage.component.css
+++ b/web1/src/app/product/add-manage/add-manage.component.css
@@ -25,3 +25,11 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.bg_none {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
