--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -5,25 +5,25 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Brand/NonBrand (Assign) <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                            (click)="exportAsXLSX()"></i></h2>
+                        <h2>Brand/NonBrand (Assign) <i class="fa fa-file-excel-o" title="ExportAsXLSX"
+                                aria-hidden="true" type="button" (click)="exportAsXLSX()"></i></h2>
                     </div>
                     <div class="body">
                         <!-- form start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm" (ngSubmit)="getInventoryData()">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Shop</mat-label>
-                                        <mat-select name="shopID"  [(ngModel)]="data.ShopID" multiple>
-                                            <mat-option [value]= 0>All</mat-option>
+                                        <mat-select name="shopID" [(ngModel)]="data.ShopID" multiple>
+                                            <mat-option [value]=0>All</mat-option>
                                             <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
                                                     [style.color]="'blue'"
                                                     *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span> </mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="data.ProductCategory"
@@ -39,7 +39,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Current Status</mat-label>
                                         <mat-select name="Status" [(ngModel)]="data.CurrentStatus" #singleSelect>
@@ -57,12 +57,14 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Supplier Name</mat-label>
-                                        <mat-select name="Supplier" editable="true" [(ngModel)]="data.SupplierID" #singleSelect>
+                                        <mat-select name="Supplier" editable="true" [(ngModel)]="data.SupplierID"
+                                            #singleSelect>
                                             <mat-option [value]="0">All</mat-option>
-                                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                                            <mat-option *ngFor="let sup of supplierList  let i = index;"
+                                                [value]="sup.ID">
                                                 {{sup.Name}}
                                             </mat-option>
                                         </mat-select>
@@ -71,7 +73,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-2 mb-0 ">
+                                <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Brand Type</mat-label>
                                         <mat-select name="BrandType" [(ngModel)]="data.BrandType" #singleSelect>
@@ -84,16 +86,17 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-md-1 col-sm-12 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
-                                        <input matInput name="Barcode" [(ngModel)]="data.Barcode" (ngModelChange)="data.Barcode = onChange($event)" #Barcodecontrol>
+                                        <input matInput name="Barcode" [(ngModel)]="data.Barcode"
+                                            (ngModelChange)="data.Barcode = onChange($event)" #Barcodecontrol>
                                         <mat-error>
                                             Barcode required
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-1 col-lg-1 col-md-3 col-3  mb-3 mb-sm-0 ">
                                     <button type="submit" mat-raised-button color="primary">Search</button>
                                 </div>
                             </div>
@@ -105,8 +108,8 @@
                                         <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
                                             <mat-label>{{spec.FieldName}}</mat-label>
                                             <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
-                                                (selectionChange)="getFieldSupportData(i)"
-                                                editable="true" [required]="spec.Required === 1" #singleSelect>
+                                                (selectionChange)="getFieldSupportData(i)" editable="true"
+                                                [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData "
@@ -125,8 +128,7 @@
                                             <input matInput name="{{spec.FieldName+'2'}}"
                                                 [(ngModel)]="spec.SelectedValue"
                                                 (ngModelChange)="spec.SelectedValue = onChange($event)"
-                                                [required]="spec.Required === 1"
-                                                (blur)="getFieldSupportData(i)">
+                                                [required]="spec.Required === 1" (blur)="getFieldSupportData(i)">
                                             <mat-error>
                                                 {{spec.FieldName}} is Required
                                             </mat-error>
@@ -153,65 +155,86 @@
                             </div>
                             <!--  spec end -->
                         </form>
-                            <!-- form end -->
+                        <!-- form end -->
                         <!-- list start -->
                         <form>
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                    <div class="table-responsive">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
                                             <thead>
-                                                <tr style="white-space: nowrap;" (click)="showInput()" [ngClass]="{'old': UpdateBarndType, 'new': !UpdateBarndType}">
-                                                <th>S No.</th>
-                                                <th>Product Category</th>
-                                                <th>Product Name</th>
-                                                <th>BrandType</th>
-                                                <th>PurchaseDate</th>
-                                                <th>Quantity</th>
-                                                <th>Current Shop</th>
-                                                <th>Status</th>
-                                                <th>Barcode</th>
-                                                <th>Supplier</th>
-                                                <th>Unit Price</th>
-                                                <th>Dis%</th>
-                                                <th>GST%</th>
-                                                <th>GST Type</th>
-                                                <th>Retail Price</th>
-                                                <th>WholeSale Price</th>
+                                                <tr style="white-space: nowrap;" (click)="showInput()"
+                                                    [ngClass]="{'old': UpdateBarndType, 'new': !UpdateBarndType}">
+                                                    <th>S No.</th>
+                                                    <th>Product Category</th>
+                                                    <th>Product Name</th>
+                                                    <th>BrandType</th>
+                                                    <th>PurchaseDate</th>
+                                                    <th>Quantity</th>
+                                                    <th>Current Shop</th>
+                                                    <th>Status</th>
+                                                    <th>Barcode</th>
+                                                    <th>Supplier</th>
+                                                    <th>Unit Price</th>
+                                                    <th>Dis%</th>
+                                                    <th>GST%</th>
+                                                    <th>GST Type</th>
+                                                    <th>Retail Price</th>
+                                                    <th>WholeSale Price</th>
                                                 </tr>
                                             </thead>
-                                            <tbody class="text-center" >
-                                                <tr *ngFor="let s of SummaryList; let i = index;"  >
+                                            <tbody class="text-center">
+                                                <tr *ngFor="let s of SummaryList; let i = index;">
                                                     <td [ngClass]="{'my_class': s.BrandType === '1'}">{{i+1}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.ProductTypeName}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.ProductName}}</td>
-                                                    <td *ngIf="!UpdateBarndType" [ngClass]="{'my_class': s.BrandType === 1}">
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.ProductTypeName}}</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.ProductName}}
+                                                    </td>
+                                                    <td *ngIf="!UpdateBarndType"
+                                                        [ngClass]="{'my_class': s.BrandType === 1}">
                                                         <span *ngIf="s.BrandType == 0">None</span>
                                                         <span *ngIf="s.BrandType == 1">Brand</span>
                                                         <span *ngIf="s.BrandType == 2">Non-Brand</span>
                                                     </td>
-                                                    <td *ngIf="UpdateBarndType" style=" width: 120px;text-align: center;">
-                                                        <select style="height: 26px;" name="BarndTypeUp" [(ngModel)]="s.BrandType" #name="ngModel" (change)="updateInventorySummary(s)" [ngModelOptions]="{standalone: true}" name="s{{i}}">
+                                                    <td *ngIf="UpdateBarndType"
+                                                        style=" width: 120px;text-align: center;">
+                                                        <select style="height: 26px;" name="BarndTypeUp"
+                                                            [(ngModel)]="s.BrandType" #name="ngModel"
+                                                            (change)="updateInventorySummary(s)"
+                                                            [ngModelOptions]="{standalone: true}" name="s{{i}}">
                                                             <option [value]='0'>None</option>
                                                             <option [value]='1'>Brand</option>
                                                             <option [value]='2'>Non-Barnd</option>
                                                         </select>
                                                     </td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.PurchaseDate | date: 'dd/MM/yyyy'}}</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.PurchaseDate |
+                                                        date: 'dd/MM/yyyy'}}</td>
                                                     <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.Count}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.ShopName}}<span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.CurrentStatus}}</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.ShopName}}<span [style.color]="'blue'"
+                                                            *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.CurrentStatus}}</td>
                                                     <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.Barcode}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.SupplierName}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.UnitPrice}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.DiscountPercentage}}%</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.GSTPercentagex}}%</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.GSTTypex}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.RetailPrice}}</td>
-                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.WholeSalePrice}}</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.SupplierName}}
+                                                    </td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.UnitPrice}}
+                                                    </td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.DiscountPercentage}}%</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.GSTPercentagex}}%</td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.GSTTypex}}
+                                                    </td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.RetailPrice}}
+                                                    </td>
+                                                    <td [ngClass]="{'my_class': s.BrandType === '1'}">
+                                                        {{s.WholeSalePrice}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
+                                    </div>
                                 </div>
                             </div>
                         </form>
