--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -87,6 +87,7 @@
             <div class="body mt-md-1 pt-3 mt-5 p-2">
               <div class="row table-responsive" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                  <div class="table-responsive">
                   <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
                   <table *ngIf="this.dataList.length != 0"  class="table table-striped table-hover table-sm table-bordered"
                     style="border: 2px solid #fff !important; ">
@@ -139,6 +140,7 @@
                       </tr>
                     </tbody>
                   </table>
+                </div>
                 </div>
               </div>
             </div>
