--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -6,7 +6,7 @@
             <div class="card p-0">
               <div class="header p-2 py-0 pt-1">
                 <div class="row">
-                  <div class="col-md-2 col-8 p-0 ms-3">
+                  <div class=" col-lg-2 col-md-4 col-8 p-0 ms-3">
                     <h2>Purchase Return List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                        (click)="exportAsXLSX()" ></i></h2>
                   </div>
@@ -35,14 +35,14 @@
                     </div>
                   </div>
                   <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
-                    <button *ngIf="addPurchaseReturnList" class="bg-none" [routerLink]="['/inventory/purchase-return',0]">
+                    <button type="button" *ngIf="addPurchaseReturnList" class="bg-none" [routerLink]="['/inventory/purchase-return',0]">
                       <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                     </button>
                   </div>
                 </div>
               </div>
               <!-- purchase list start -->
-              <div class="body mt-md-2 mt-5 p-2">
+              <div class="body mt-md-2 mt-5 pt-4 pt-md-0 p-2">
                 <div class="row" >
                   <div class="col-sm-12" style="overflow: auto; height: 530px;">
                     <div class="table-responsive">
@@ -71,14 +71,14 @@
                           <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 5%;" >
-                            <button *ngIf="editPurchaseReturnList" class="detail_icons bg-btn" (click)="openModal(content,data)" >
+                            <button type="button" *ngIf="editPurchaseReturnList" class="detail_icons bg-btn" (click)="openModal(content,data)" >
                               <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"> </i>
                             </button>
-                            <button *ngIf="editPurchaseReturnList" class="bg-btn" [routerLink]="['/inventory/purchase-return',data.ID]">
+                            <button type="button" *ngIf="editPurchaseReturnList" class="bg-btn" [routerLink]="['/inventory/purchase-return',data.ID]">
                               <mat-icon class="edit_icon ms-1">edit
                               </mat-icon>
                             </button>
-                            <button *ngIf="deletePurchaseReturnList" class="bg-btn" (click)="deleteItem(i)">
+                            <button type="button" *ngIf="deletePurchaseReturnList" class="bg-btn" (click)="deleteItem(i)">
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
                           </td>
