--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -11,7 +11,7 @@
                         <!-- save Product Return start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm" (ngSubmit)="addItem()">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                       <mat-label>Supplier Name</mat-label>
                                       <mat-select name="Supplier" [(ngModel)]="selectedPurchaseMaster.SupplierID" editable="true"
@@ -25,7 +25,7 @@
                                       </mat-error>
                                     </mat-form-field>
                                   </div>
-                                  <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                  <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                       <mat-label>Shop Name</mat-label>
                                       <mat-select name="shopID" [(ngModel)]="selectedPurchaseMaster.ShopID" required >
@@ -35,24 +35,24 @@
                                       </mat-select>
                                     </mat-form-field>
                                   </div>
-                                  <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
+                                  <div class="col-xl-2 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>System Debit No.</mat-label>
                                         <input matInput name="SystemCn " [(ngModel)]="selectedPurchaseMaster.SystemCn"
                                         required   (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Supplier CN No.</mat-label>
                                         <input matInput name="SupplierCn" [(ngModel)]="selectedPurchaseMaster.SupplierCn"
                                           disabled  (ngModelChange)="selectedPurchaseMaster.SupplierCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-4 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-4 col-lg-2 col-md-0 col-sm-0 mb-0">
                                  
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
                                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
@@ -60,7 +60,7 @@
                                             #GSTNocontrol [autocomplete]="false" appAutoFoucsDirectives>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
@@ -75,7 +75,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 mb-0"
+                                <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0"
                                     *ngIf="( selectedProduct !== '' || selectedProduct !== undefined || selectedProduct !== null )">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Barcode</mat-label>
@@ -93,8 +93,8 @@
                                 </div>
                             </div>
                             <!-- save product spec start -->
-                            <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0"
+                            <div class="row  ">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0"
                                     *ngFor="let spec of specList ; let i = index;">
                                     <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
                                         <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
@@ -149,28 +149,28 @@
                             <!-- save product spec end -->
                         
                             <div class="row">
-                                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                                <div class="col-xl-3 col-lg-3 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product Name</mat-label>
                                         <input matInput style="color: rgb(255 0 0) !important;" name="ProdName" [(ngModel)]="xferItem.ProductName" required
                                             [disabled]=true>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
                                         <input matInput style="color: rgb(255 0 0) !important;" name="ProdBarcode" [(ngModel)]="xferItem.Barcode" required
                                             [disabled]=true>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Available</mat-label>
                                         <input matInput type="number" min="0" style="color: rgb(255 0 0) !important;" name="ProdBarcodecount" disabled
                                             [(ngModel)]="item.BarCodeCount">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1  col-lg-1 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-1  col-lg-1 col-md-2 col-4 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Return Quantity</mat-label>
                                         <input matInput name="Quantity" type="number" min="0"
@@ -180,7 +180,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Remark</mat-label>
                                         <input matInput name="Remark" [(ngModel)]="xferItem.Remark"
@@ -198,7 +198,7 @@
                         <!-- list start -->
                         <form #f2="ngForm"  (ngSubmit)="onSumbit()">
                             <!-- Add item List start -->
-                            <div class="row" >
+                            <div class="row mt-3" >
                                 <div class="col-sm-12 p-0" style="overflow-y: auto; height: 340px;box-shadow: 1px 0px 2px 4px rgba(221, 221, 221, 0.338);">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
@@ -246,7 +246,7 @@
                             <!-- Add item List end -->
                             <!-- Total calculcation start -->
                             <div class="row pt-3 ">
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>ReturnQuantity</mat-label>
                                         <input matInput name="Quantityt" type="number" min="0" [(ngModel)]="selectedPurchaseMaster.Quantity"
@@ -256,7 +256,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Sub Total</mat-label>
                                         <input matInput name="SubTotalt" type="number" min="0" [(ngModel)]="selectedPurchaseMaster.SubTotal"
@@ -266,7 +266,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>D.Amount</mat-label>
                                         <input matInput name="DAmountt" type="number" min="0"
@@ -277,7 +277,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0"  *ngFor="let gst of gst_detail">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0"  *ngFor="let gst of gst_detail">
                                     <mat-form-field class="example-full-width mb-0">
                                     <mat-label>{{gst.GSTType}}</mat-label>
                                     <input matInput name="igstAmt"   value="{{gst.Amount | number:'1.0-2'}}" disabled>
@@ -286,7 +286,7 @@
                                       </mat-error>
                                 </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>TotalTAXAmt</mat-label>
                                         <input matInput name="GSTAmtt" type="number" min="0" [(ngModel)]="selectedPurchaseMaster.GSTAmount"
@@ -296,7 +296,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label style="color: rgb(255 0 0);">Total Amount</mat-label>
                                         <input style="color: rgb(255 0 0) !important;" matInput name="TotalAmountt"
@@ -307,7 +307,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label style="color: rgb(255 0 0);">RoundOff</mat-label>
                                         <input style="color: rgb(255 0 0) !important;" matInput name="RoundOff"
@@ -316,14 +316,14 @@
                                             #RoundOffcontrol [autocomplete]="false">
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 ml-auto">
+                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-2 col-3  mb-0 ml-auto">
                                     <button type="submit" [disabled]="itemList.length === 0"  mat-raised-button color="primary">Save</button>
                                 </div>
-                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 mr-3">
+                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-2 col-3  mb-0 mr-3">
                                     <button type="button"  [disabled]="itemList.length === 0" (click)="updatedPurchaseReturn()"  mat-raised-button
                                         color="primary">Update</button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-6 mb-0 ml-auto">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6  mb-0 ml-auto">
                                     <button  class="shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
                                     <button class="whatsapp ms-1 me-1"><i class="fa-brands fa-whatsapp" ></i> </button>
                                     <button class="email"> <i class="fa-solid fa-envelope"></i></button>
