--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -11,15 +11,16 @@
                         <!-- form start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
-                                        <input matInput name="SearchBarCode" [(ngModel)]="SearchBarCode" (keydown.Tab)="getBarcodeDataByBarcodeNo('search')"
-                                         required #SearchBarCodecontrol 
-                                            #GSTNocontrol [autocomplete]="false" appAutoFoucsDirectives>
+                                        <input matInput name="SearchBarCode" [(ngModel)]="SearchBarCode"
+                                            (keydown.Tab)="getBarcodeDataByBarcodeNo('search')" required
+                                            #SearchBarCodecontrol #GSTNocontrol [autocomplete]="false"
+                                            appAutoFoucsDirectives>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
@@ -34,12 +35,13 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 mb-0"
+                                <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 mb-0"
                                     *ngIf="( selectedProduct !== '' || selectedProduct !== undefined || selectedProduct !== null )">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Barcode</mat-label>
-                                        <mat-select name="FieldType" [(ngModel)]="SearchBarCode" (selectionChange)="getBarcodeDataByBarcodeNo('search')"
-                                             required #Typecontrol>
+                                        <mat-select name="FieldType" [(ngModel)]="SearchBarCode"
+                                            (selectionChange)="getBarcodeDataByBarcodeNo('search')" required
+                                            #Typecontrol>
                                             <mat-option *ngFor="let bc of barCodeList  let i = index;"
                                                 [value]="bc.Barcode">
                                                 {{bc.Barcode}} # {{bc.BarCodeCount}} | {{bc.ProductName | uppercase}}
@@ -51,12 +53,13 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
-                                    <button type="button"  mat-raised-button color="primary" (click)="searchAll('')">Search</button>
-                               </div>
+                                    <button type="button" mat-raised-button color="primary"
+                                        (click)="searchAll('')">Search</button>
+                                </div>
                             </div>
                             <!-- save product spec start -->
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0"
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-12 mb-0"
                                     *ngFor="let spec of specList ; let i = index;">
                                     <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
                                         <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
@@ -110,13 +113,14 @@
                             </div>
                             <!-- save product spec end -->
                         </form>
-                            <!-- form end -->
+                        <!-- form end -->
                         <!-- list start -->
                         <form>
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 400px;">
+                                    <div class="table-responsive">
                                         <table class="table table-striped table-hover table-sm table-bordered"
-                                        style="border: 2px solid #fff !important;">
+                                            style="border: 2px solid #fff !important;">
                                             <thead [ngClass]="{'old': UpdateBarcode, 'new': !UpdateBarcode}">
                                                 <tr style="white-space: nowrap;" (click)="showInput()">
                                                     <th class="text-left">S.No</th>
@@ -136,38 +140,51 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                                <tr *ngFor="let data of searchList ; let i = index;" >
+                                                <tr *ngFor="let data of searchList ; let i = index;">
                                                     <td>{{i+1}} </td>
-                                                    <td><i class="far fa-file-pdf" style="color: #4652c2;font-size: 22px;cursor: pointer;"> </i></td>
+                                                    <td><i class="far fa-file-pdf"
+                                                            style="color: #4652c2;font-size: 22px;cursor: pointer;">
+                                                        </i></td>
                                                     <td>{{data.ProductName}}</td>
-                                                    <td *ngIf="!UpdateBarcode" >{{data.CurrentStatus}}</td>
+                                                    <td *ngIf="!UpdateBarcode">{{data.CurrentStatus}}</td>
                                                     <td *ngIf="UpdateBarcode" style=" width: 120px;text-align: center;">
-                                                        <select style="height: 26px;" name="CurrentStatus" [(ngModel)]="data.CurrentStatus" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <select style="height: 26px;" name="CurrentStatus"
+                                                            [(ngModel)]="data.CurrentStatus" #name="ngModel"
+                                                            [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                             <option value="Available">Available</option>
                                                             <option value="Sold">Sold</option>
                                                             <option value="Pre Order">Pre Order</option>
                                                             <option value="Lost/Stolen">Lost/Stolen</option>
                                                             <option value="Damaged">Damaged</option>
                                                             <option value="Customer Return">Customer Return </option>
-                                                            <option value="Return To Supplier">Return To Supplier </option>
+                                                            <option value="Return To Supplier">Return To Supplier
+                                                            </option>
                                                             <option value="Transfer Pending">Transfer Pending </option>
                                                         </select>
                                                     </td>
                                                     <td *ngIf="!UpdateBarcode"> {{data.Barcode}}</td>
                                                     <td *ngIf="UpdateBarcode">
-                                                        <input  style=" width: 90px; text-align: center;" [(ngModel)]="data.Barcode" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input style=" width: 90px; text-align: center;"
+                                                            [(ngModel)]="data.Barcode" #name="ngModel"
+                                                            [ngModelOptions]="{standalone: true}" name="data{{i}}">
                                                     </td>
-                                                    <td *ngIf="!UpdateBarcode">{{(data.Remark !== 'null')? data.Remark: ''}}</td>
+                                                    <td *ngIf="!UpdateBarcode">{{(data.Remark !== 'null')? data.Remark:
+                                                        ''}}</td>
                                                     <td *ngIf="UpdateBarcode" style=" width: 90px;text-align: center;">
-                                                        <input  [(ngModel)]="data.Remark" (ngModelChange)="data.Remark = onChange($event)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                        <input [(ngModel)]="data.Remark"
+                                                            (ngModelChange)="data.Remark = onChange($event)"
+                                                            #name="ngModel" [ngModelOptions]="{standalone: true}"
+                                                            name="data{{i}}">
                                                     </td>
                                                     <td *ngIf="UpdateBarcode">
-                                                        <button class="barcodeUpBtn" (click)="updateBarcode(data)" >
-                                                               Save
+                                                        <button class="barcodeUpBtn" (click)="updateBarcode(data)">
+                                                            Save
                                                         </button>
                                                     </td>
                                                     <td>{{data.CompanyName}}</td>
-                                                    <td>{{data.ShopName}}<span [style.color]="'blue'" *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
+                                                    <td>{{data.ShopName}}<span [style.color]="'blue'"
+                                                            *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span>
+                                                    </td>
                                                     <td>{{data.InvoiceNo}}</td>
                                                     <td>{{data.SupplierName}}</td>
                                                     <td>{{data.RetailPrice}}</td>
@@ -176,6 +193,7 @@
                                                 </tr>
                                             </tbody>
                                         </table>
+                                    </div>
                                 </div>
                             </div>
                         </form>
@@ -186,4 +204,3 @@
         </div>
     </div>
 </section>
-
