--- a/web1/src/app/product/add-manage/add-manage.component.html
+++ b/web1/src/app/product/add-manage/add-manage.component.html
@@ -65,7 +65,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div *ngIf="showAdd" class="col-md-6 col-sm-12 mb-0">
-                                    <button mat-mini-fab color="primary" (click)="showAdd = !showAdd; saveDepartment()"
+                                    <button type="button" mat-mini-fab color="primary" (click)="showAdd = !showAdd; saveDepartment()"
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>save</mat-icon>
                                     </button>
@@ -209,8 +209,10 @@
                                 <td>{{c.GSTType}}</td>
                                 <td>{{c.TotalAmount}}</td>
                                 <td>
-                                    <mat-icon *ngIf="deleteChargeManagement" class="delete_icon" (click)="chargedelete(i)">delete_forever
-                                    </mat-icon>
+                                    <button type="button" class="bg_none" *ngIf="deleteChargeManagement"  (click)="chargedelete(i)">
+                                        <mat-icon class="delete_icon" >delete_forever
+                                        </mat-icon>
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
@@ -362,8 +364,9 @@
                                 <td>{{c.GSTType}}</td>
                                 <td>{{c.TotalAmount}}</td>
                                 <td>
-                                    <mat-icon *ngIf="deleteServiceManagement" class="delete_icon" (click)="servicedelete(i)">delete_forever
-                                    </mat-icon>
+                                    <button type="button" class="bg_none" *ngIf="deleteServiceManagement"  (click)="servicedelete(i)">
+                                        <mat-icon  class="delete_icon">delete_forever</mat-icon>
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
